# vibe_coding

./: .gitignore  Makefile  README.md  agents_runner.py  pyproject.toml
src/vibe_coding/: __init__.py  crew.py  main.py  tools.py
src/vibe_coding/config/: agents.yaml  tasks.yaml
