[project]
name = "vibe-coding"
version = "0.1.0"
description = ""
authors = [
    { name = "mifrun" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "crewai[litellm] (>=1.14.3,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "vibe_coding", from = "src" }]

[project.scripts]
vibe-coding = "vibe_coding.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
